# rust-wasm-app

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs
www/: index.html  package.json  webpack.config.js
